--- a/ogncy_onelove/index.html
+++ b/ogncy_onelove/index.html
@@ -51,9 +51,9 @@
 					</div>
 					<!-- Interactive Menu -->
 					<nav id="my-menu">
-				        <ul>
+				        <ul class="container">
 				        	<li class="current-page">
-								<a href="#">
+								<a href="#services">
 									<div class="d-flex align-items-center">
 										<svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M58 21.3818H37.6798V1H21.3202V21.3818H1V37.6182H21.3202V58H37.6798V37.6182H58V21.3818Z" stroke="white" stroke-miterlimit="10"/>
@@ -80,7 +80,7 @@
 								</a>			
 							</li>
 				            <li>
-								<a href="#">
+								<a href="#team">
 									<div class="d-flex align-items-center">
 										<svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M58 21.3818H37.6798V1H21.3202V21.3818H1V37.6182H21.3202V58H37.6798V37.6182H58V21.3818Z" stroke="white" stroke-miterlimit="10"/>
@@ -88,25 +88,25 @@
 										<span class="link-title">Команда</span>	
 									</div>
 									<div class="menu-icons"> 
-										<i class="icon-snow-big"></i>
-										<i class="icon-star"></i>
-										<i class="icon-heart"></i>
-										<i class="icon-snow-big"></i>
-
-										<i class="icon-star"></i>
-										<i class="icon-snow-big"></i>
 										<i class="icon-plus"></i>
-										<i class="icon-star"></i>
-
 										<i class="icon-grid"></i>
-										<i class="icon-heart"></i>
-										<i class="icon-snow-big"></i>
+										<i class="icon-star"></i>
 										<i class="icon-plus"></i>
+										
+										<i class="icon-grid"></i>
+										<i class="icon-star"></i>
+										<i class="icon-plus"></i>
+										<i class="icon-grid"></i>
+
+										<i class="icon-plus"></i>
+										<i class="icon-grid"></i>
+										<i class="icon-star"></i>
+										<i class="icon-grid"></i>
 									</div>
 								</a>
 							</li>
 				            <li>
-								<a href="#">
+								<a href="#projects">
 									<div class="d-flex align-items-center">
 										<svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M58 21.3818H37.6798V1H21.3202V21.3818H1V37.6182H21.3202V58H37.6798V37.6182H58V21.3818Z" stroke="white" stroke-miterlimit="10"/>
@@ -114,25 +114,25 @@
 										<span class="link-title">Кейсы</span>	
 									</div>
 									<div class="menu-icons"> 
-										<i class="icon-snow-big"></i>
-										<i class="icon-star"></i>
-										<i class="icon-heart"></i>
-										<i class="icon-snow-big"></i>
-
-										<i class="icon-star"></i>
-										<i class="icon-snow-big"></i>
-										<i class="icon-plus"></i>
-										<i class="icon-star"></i>
-
 										<i class="icon-grid"></i>
-										<i class="icon-heart"></i>
-										<i class="icon-snow-big"></i>
+										<i class="icon-heart pink"></i>
 										<i class="icon-plus"></i>
+										<i class="icon-grid"></i>
+
+										<i class="icon-heart pink"></i>
+										<i class="icon-plus"></i>
+										<i class="icon-grid"></i>
+										<i class="icon-heart pink"></i>
+
+										<i class="icon-plus"></i>
+										<i class="icon-grid"></i>
+										<i class="icon-heart pink"></i>
+										<i class="icon-snow-big"></i>
 									</div>
 								</a>
 							</li>
 				            <li>
-								<a href="#">
+								<a href="#contacts">
 									<div class="d-flex align-items-center">
 										<svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M58 21.3818H37.6798V1H21.3202V21.3818H1V37.6182H21.3202V58H37.6798V37.6182H58V21.3818Z" stroke="white" stroke-miterlimit="10"/>
@@ -140,20 +140,20 @@
 										<span class="link-title">Контакты</span>	
 									</div>
 									<div class="menu-icons"> 
-										<i class="icon-snow-big"></i>
-										<i class="icon-star"></i>
-										<i class="icon-heart"></i>
-										<i class="icon-snow-big"></i>
-
 										<i class="icon-star"></i>
 										<i class="icon-snow-big"></i>
-										<i class="icon-plus"></i>
+										<i class="icon-grid pink"></i>
 										<i class="icon-star"></i>
 
-										<i class="icon-grid"></i>
+										<i class="icon-snow-big pink"></i>
+										<i class="icon-plus"></i>
+										<i class="icon-heart"></i>
+										<i class="icon-star"></i>
+
+										<i class="icon-grid pink"></i>
 										<i class="icon-heart"></i>
 										<i class="icon-snow-big"></i>
-										<i class="icon-plus"></i>
+										<i class="icon-plus pink"></i>
 									</div>
 								</a>
 							</li>
@@ -248,7 +248,7 @@
 			</div>
 		</section>
 		<!--! Services -->
-		<section class="services-section pd-section bg-light-gray">
+		<section class="services-section pd-section bg-light-gray" id="services">
 			<div class="container">
 				<!-- Line title -->
 				<div class="line-title">
@@ -310,7 +310,7 @@
 			</div>
 		</section>
 		<!--! Team -->
-		<section class="team-section pd-section bg-light-gray">
+		<section class="team-section pd-section bg-light-gray" id="team">
 			<div class="container">
 				<!-- Line title -->
 				<div class="line-title">
@@ -376,7 +376,7 @@
 			</div>
 		</section>
 		<!--! Projects -->
-		<section class="section-projects pd-section">
+		<section class="section-projects" id="projects">
 			<div class="container">
 				<!-- Line title -->
 				<div class="line-title">
@@ -390,7 +390,7 @@
 					<p>Наши клиенты — компании малого и среднего бизнеса, работающие в различных отраслях. При выполнении поставленных задач мы используем наш энтузизам, нестандартный взгляд на мир и креатив.</p>	
 				</div>
 				<!-- Row -->
-				<div class="row align-items-center section-projects-first-col">
+				<div class="row justify-content-between align-items-center section-projects-first-col">
 					<!-- Column -->
 					<div class="col-xl-3 d-flex flex-column align-items-start">
 						<a href="#" class="btn btn-dark">Посмотреть все кейсы</a>
@@ -398,7 +398,7 @@
 						<p>Выполняем разные проекты для активных брендов и лидеров рынка.</p>
 					</div>
 					<!-- Column -->
-					<div class="col-xl-9">
+					<div class="col-xl-8">
 						<!-- Slider -->
 						<div class="projects-slider">
 							<!-- Item -->
@@ -451,7 +451,7 @@
 			</div>
 		</section>
 		<!--! Feedback -->
-		<section class="section-feedback">
+		<section class="section-feedback" id="feedback">
 			<div class="container">
 				<!-- Snow svg -->
 				<svg class="snow-svg-icon" width="89" height="95" viewBox="0 0 89 95" fill="none" xmlns="http://www.w3.org/2000/svg">
