--- a/ogncy_onelove/index.html
+++ b/ogncy_onelove/index.html
@@ -29,9 +29,11 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-4 col-md-3 col-6 order-1">
-						<div class="row flex-md-row flex-column align-items-md-center">
+						<div class="row flex-xl-row flex-column align-items-xl-center">
 							<!-- Logo -->
-							<a href="#" class="logo">og<span class="apostraphe">'</span>ncy</a>
+							<a href="#" class="logo">
+								<img src="img/logo.png" alt="">
+							</a>
 							<!-- Instagram -->
 							<a href="#" class="soc-link">Instagram @og.ncy</a>
 						</div>
@@ -170,9 +172,11 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-4 col-md-3 col-6 order-1">
-						<div class="row flex-md-row flex-column align-items-md-center">
+						<div class="row flex-xl-row flex-column align-items-xl-center">
 							<!-- Logo -->
-							<a href="#" class="logo">og<span class="apostraphe">'</span>ncy</a>
+							<a href="#" class="logo">
+								<img src="img/logo.png" alt="">
+							</a>
 							<!-- Instagram -->
 							<a href="#" class="soc-link">Instagram @og.ncy</a>
 						</div>
@@ -614,7 +618,9 @@
 					<!-- Column -->
 					<div class="col-xl-4 col-lg-3 d-flex flex-xl-row flex-column align-items-start footer-column">
 						<!-- Logo -->
-						<a href="#" class="logo">og<span class="apostraphe">'</span>ncy</a>
+						<a href="#" class="logo">
+							<img src="img/logo.png" alt="">
+						</a>
 						<!-- Instagram -->
 						<a href="#" class="soc-link">Instagram @og.ncy</a>
 					</div>
