--- a/ogncy_onelove/index.html
+++ b/ogncy_onelove/index.html
@@ -219,7 +219,7 @@
 						<h5 class="start-section__subtitle">которые останутся <span>эффективными</span> и завтра</h5>
 
 						<!-- Btn -->
-						<a href="#" class="btn btn-dark-filled">Посмотреть кейсы</a>
+						<a href="projects.html" class="btn btn-dark-filled">Посмотреть кейсы</a>
 
 						<!-- Quote -->
 						<div class="quote">
@@ -396,8 +396,8 @@
 				<!-- Row -->
 				<div class="row justify-content-between align-items-center section-projects-first-col">
 					<!-- Column -->
-					<div class="col-xl-3 d-flex flex-column align-items-start">
-						<a href="#" class="btn btn-dark">Посмотреть все кейсы</a>
+					<div class="col-xl-3 d-flex flex-md-column flex-column-reverse align-items-start">
+						<a href="projects.html" class="btn btn-dark">Посмотреть все кейсы</a>
 						<p>Среди наших кейсов есть такие направления, как: SMM, PR, marketing, design и реклама в digital.</p>
 						<p>Выполняем разные проекты для активных брендов и лидеров рынка.</p>
 					</div>
