--- a/ogncy_onelove/projects.html
+++ b/ogncy_onelove/projects.html
@@ -214,7 +214,7 @@
                 </div>
                 <!--! Category -->
                 <div class="projects-categories d-flex flex-wrap">
-                    <div class="projects-categories__category btn btn-dark current">SMM</div>
+                    <div class="projects-categories__category btn btn-dark">SMM</div>
                     <div class="projects-categories__category btn btn-dark">PR</div>
                     <div class="projects-categories__category btn btn-dark">Content&Marketing</div>
                     <div class="projects-categories__category btn btn-dark">Digital</div>
