--- a/ogncy_onelove/projects.html
+++ b/ogncy_onelove/projects.html
@@ -16,6 +16,7 @@
 	<!-- Google fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
 	<!-- Main style -->
 	<link rel="stylesheet" href="css/main.min.css">
@@ -160,7 +161,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">Обучение</a>
+								<a href="services.html">Обучение</a>
 							</li>
 				        </ul>
 				    </nav>
@@ -542,7 +543,7 @@
 							<li><a href="#">Главная</a></li>
 							<li><a href="#">Услуги</a></li>
 							<li><a href="#">Кейсы</a></li>
-							<li><a href="#">Обучение</a></li>
+							<li><a href="services.html">Обучение</a></li>
 						</ul>
 					</div>
 
