--- a/ogncy_onelove/projects.html
+++ b/ogncy_onelove/projects.html
@@ -383,11 +383,12 @@
 				<div class="row align-items-center">
 					<!-- 1 -->
 					<div class="col-lg-8 col-md-7">
-						<h3 class="section-feedback__title">Хотите улучшить показатели? мы поможем!</h3>
+						<h3 class="section-feedback__title">Хотите так же? <br> мы только за!</h3>
 						<div class="section-feedback__call-text">
 							<p>Заполните форму обратной связи, и мы свяжемся с вами в ближайшее время</p>
 							<div class="arrow-line light"></div>
 						</div>
+						<span class="section-feedback__pointer">Наши клиенты <i class="fas fa-arrow-down"></i></span>
 					</div>
 					<!-- 2 -->
 					<div class="col-lg-4 col-md-5 d-flex flex-column">
@@ -411,82 +412,41 @@
 		<!--! Clients -->
 		<section class="section-clients-2 pd-section">
 			<div class="container">
-				
 				<!-- Client-slider -->
 				<div class="client-slider-2">
 					<!-- Slide -->
 					<div class="client-slide">
 						<div class="client-slide__container">
-							<img src="img/client_gray1.png" alt="" class="client-slide__img">
+							<img src="img/client1.png" alt="" class="client-slide__img">
 						</div>
 					</div>
 					<!-- Slide -->
 					<div class="client-slide">
 						<div class="client-slide__container">
-							<img src="img/client_gray2.png" alt="" class="client-slide__img">
+							<img src="img/client2.png" alt="" class="client-slide__img">
 						</div>
 					</div>
 					<!-- Slide -->
 					<div class="client-slide">
 						<div class="client-slide__container">
-							<img src="img/client_gray3.png" alt="" class="client-slide__img">
+							<img src="img/client3.png" alt="" class="client-slide__img">
 						</div>
 					</div>
 					<!-- Slide -->
 					<div class="client-slide">
 						<div class="client-slide__container">
-							<img src="img/client_gray4.png" alt="" class="client-slide__img">
+							<img src="img/client4.png" alt="" class="client-slide__img">
 						</div>
 					</div>
 					<!-- Slide -->
 					<div class="client-slide">
 						<div class="client-slide__container">
-							<img src="img/client_gray5.png" alt="" class="client-slide__img">
+							<img src="img/client5.png" alt="" class="client-slide__img">
 						</div>
 					</div>
 					<div class="client-slide">
 						<div class="client-slide__container">
-							<img src="img/client_gray6.png" alt="" class="client-slide__img">
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--! Useful links -->
-		<section class="section-useful-links pd-section">
-			<div class="container">
-				<!-- Line title -->
-				<div class="line-title">
-					<span class="counter">04</span>
-					<div class="line"></div>
-					<span class="name">FAQ от og`ncy</span>
-				</div>
-
-				<!-- Section title -->
-				<h3 class="section-title-2">ПОЛЕЗНЫЕ ССЫЛКИ</h3>
-
-				<!-- Row -->
-				<div class="row section-useful-links__row">
-					<!-- Column -->
-					<div class="col-lg-3 d-flex flex-column justify-content-between section-useful-links__column-1">
-						<p>Надеюсь, теперь вы получили ответы на 3 самых частых вопроса.</p>
-						<p>Листайте дальше, внизу для вашего бизнеса есть небольшой подарок!</p>
-						<div class="arrow-line"></div>
-					</div>
-
-					<!-- Column -->
-					<div class="col-lg-4 d-flex flex-column align-items-center section-useful-links__column-2">
-						<a href="#" class="btn">Скачать нашу презентацию</a>
-						<a href="#" class="btn">Посмотреть полный прайс-лист</a>
-						<a href="#" class="btn">Подписаться в Instagram</a>
-					</div>
-
-					<!-- Column -->
-					<div class="col-lg-5 section-useful-links__column-3">
-						<div class="section-useful-links__banner" style="background-image: url('img/useful-links.png');">
-							<svg width="72" height="65" viewBox="0 0 72 65" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M53.5 1L36 12.4804L18.5 1L1 15.3268V35.4413L36 64L71 35.3464V15.3268L53.5 1Z" stroke="black" stroke-miterlimit="10"/>
-							</svg>	
+							<img src="img/client6.png" alt="" class="client-slide__img">
 						</div>
 					</div>
 				</div>
