--- a/Autoparts/payment.html
+++ b/Autoparts/payment.html
@@ -41,7 +41,83 @@
 					</div>
 
 					<!--* Catalog -->
-					<div class="catalog w-100">
+					<div class="catalog w-100 d-sm-block d-none">
+						<!-- Catalog item -->
+						<li class="accordion catalog__item">
+							<!-- Link -->
+							<a href="categories.html" class="accordion__link catalog__link">
+								газ-автозапчасти 
+
+								<!-- Icon -->
+								<span class="accordion__icon catalog__icon accordion__toggle">
+									<i class="fa-regular fa-plus"></i>
+								</span>
+							</a>
+
+							<!-- Accordion-content -->
+							<ul class="accordion-content catalog__sub-menu">
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
+							</ul>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="category.html" class="accordion__link catalog__link">
+								паз (газон-некст) запчасти
+							</a>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="category.html" class="accordion__link catalog__link">Блок цилиндров</a>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="category.html" class="accordion__link catalog__link">головки и блоки цилиндров</a>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="category.html" class="accordion__link catalog__link">КПП</a>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="category.html" class="accordion__link catalog__link">Редуктор заднего моста</a>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="category.html" class="accordion__link catalog__link">Раздаточная коробка</a>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="category.html" class="accordion__link catalog__link">Рулевое управление</a>
+						</li>
+					</div>
+
+					<!--* Mobile catalog -->
+					<div class="catalog w-100 d-sm-none d-block">
 						<!-- Catalog item -->
 						<li class="accordion catalog__item">
 							<!-- Link -->
@@ -74,45 +150,72 @@
 						<!-- Catalog item -->
 						<li class="accordion catalog__item">
 							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">
+							<a href="categories.html" class="accordion__link catalog__link">
 								паз (газон-некст) запчасти
+
+								<!-- Icon -->
+								<span class="accordion__icon catalog__icon accordion__toggle">
+									<i class="fa-regular fa-plus"></i>
+								</span>
 							</a>
+
+							<!-- Accordion-content -->
+							<ul class="accordion-content catalog__sub-menu">
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
+								<!-- Sub item -->
+								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
+							</ul>
 						</li>
 
 						<!-- Catalog item -->
-						<li class="accordion catalog__item">
+						<li class="catalog__item">
 							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Блок цилиндров</a>
+							<a href="delivery.html" class="accordion__link catalog__link">Доставка</a>
 						</li>
 
 						<!-- Catalog item -->
-						<li class="accordion catalog__item">
+						<li class="catalog__item">
 							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">головки и блоки цилиндров</a>
+							<a href="payment.html" class="accordion__link catalog__link">Оплата</a>
 						</li>
 
 						<!-- Catalog item -->
-						<li class="accordion catalog__item">
+						<li class="catalog__item">
 							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">КПП</a>
+							<a href="guarantee.html" class="accordion__link catalog__link">Гарантии</a>
 						</li>
 
 						<!-- Catalog item -->
-						<li class="accordion catalog__item">
+						<li class="catalog__item">
 							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Редуктор заднего моста</a>
+							<a href="price.html" class="accordion__link catalog__link">Прайс лист</a>
 						</li>
 
 						<!-- Catalog item -->
-						<li class="accordion catalog__item">
+						<li class="catalog__item">
 							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Раздаточная коробка</a>
+							<a href="about.html" class="accordion__link catalog__link">о компании</a>
 						</li>
 
 						<!-- Catalog item -->
-						<li class="accordion catalog__item">
+						<li class="catalog__item">
 							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Рулевое управление</a>
+							<a href="reviews.html" class="accordion__link catalog__link">Отзывы</a>
+						</li>
+
+						<!-- Catalog item -->
+						<li class="catalog__item">
+							<!-- Link -->
+							<a href="contacts.html" class="accordion__link catalog__link">Контакты</a>
 						</li>
 					</div>
 
