--- a/Autoparts/delivery.html
+++ b/Autoparts/delivery.html
@@ -307,7 +307,7 @@
 			<!-- Left column -->
 			<div class="col-md-3 px-0"></div>
 
-			<!-- Right column -->
+			<!--! Right column -->
 			<div class="col-md-9 px-0">
 				<div class="header-empty-space"></div>
 
@@ -364,7 +364,8 @@
                             <h4 class="delivery-brands__title">Доставка транспортными компаниями</h4>
 
                             <!-- Text -->
-                            <p class="delivery-brands__text mt-2">Доставка осуществляется по всей России, в города где есть пункты выдачи транспортных компаний. Для проверки перейдите на сайт Транспортной компании.</p>
+                            <p class="delivery-brands__text mt-2">Доставка осуществляется по всей России, в города где есть пункты выдачи транспортных компаний. <br>
+							Для проверки перейдите на сайт Транспортной компании.</p>
 
                             <!-- Row -->
                             <div class="d-flex justify-content-between align-items-center flex-column flex-lg-row ms-lg-0 mt-2">
