--- a/Autoparts/index.html
+++ b/Autoparts/index.html
@@ -27,235 +27,241 @@
 			<!-- Left column -->
 			<!-- Fixed -->
 			<div class="col-md-3 col-10 fixed-column px-0">
-				<aside class="sidebar d-flex flex-column align-items-start">
-					<div class="d-flex w-100 justify-content-between align-items-center">
-						<!--* Logo -->
-						<a href="index.html" class="logo sidebar__logo">
-							<img src="img/logo.png" alt="Autoparts logo">
-						</a>
-
-						<!-- Close button -->
-						<button class="sidebar__close-btn">
-							<i class="fa-regular fa-xmark"></i>
-						</button>
+				<aside class="sidebar d-flex flex-column align-items-start justify-content-between h-100">
+					<!-- Top -->
+					<div class="d-block w-100">
+						<div class="d-flex w-100 justify-content-between align-items-center">
+							<!--* Logo -->
+							<a href="index.html" class="logo sidebar__logo">
+								<img src="img/logo.png" alt="Autoparts logo">
+							</a>
+	
+							<!-- Close button -->
+							<button class="sidebar__close-btn">
+								<i class="fa-regular fa-xmark"></i>
+							</button>
+						</div>
+	
+						<!--* Catalog -->
+						<div class="catalog w-100 d-sm-block d-none">
+							<!-- Catalog item -->
+							<li class="accordion catalog__item">
+								<!-- Link -->
+								<a href="categories.html" class="accordion__link catalog__link">
+									газ-автозапчасти 
+	
+									<!-- Icon -->
+									<span class="accordion__icon catalog__icon accordion__toggle">
+										<i class="fa-regular fa-plus"></i>
+									</span>
+								</a>
+	
+								<!-- Accordion-content -->
+								<ul class="accordion-content catalog__sub-menu">
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
+								</ul>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="category.html" class="accordion__link catalog__link">
+									паз (газон-некст) запчасти
+								</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="category.html" class="accordion__link catalog__link">Блок цилиндров</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="category.html" class="accordion__link catalog__link">головки и блоки цилиндров</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="category.html" class="accordion__link catalog__link">КПП</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="category.html" class="accordion__link catalog__link">Редуктор заднего моста</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="category.html" class="accordion__link catalog__link">Раздаточная коробка</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="category.html" class="accordion__link catalog__link">Рулевое управление</a>
+							</li>
+						</div>
+	
+						<!--* Mobile catalog -->
+						<div class="catalog w-100 d-sm-none d-block">
+							<!-- Catalog item -->
+							<li class="accordion catalog__item">
+								<!-- Link -->
+								<a href="categories.html" class="accordion__link catalog__link">
+									газ-автозапчасти 
+	
+									<!-- Icon -->
+									<span class="accordion__icon catalog__icon accordion__toggle">
+										<i class="fa-regular fa-plus"></i>
+									</span>
+								</a>
+	
+								<!-- Accordion-content -->
+								<ul class="accordion-content catalog__sub-menu">
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
+								</ul>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="accordion catalog__item">
+								<!-- Link -->
+								<a href="categories.html" class="accordion__link catalog__link">
+									паз (газон-некст) запчасти
+	
+									<!-- Icon -->
+									<span class="accordion__icon catalog__icon accordion__toggle">
+										<i class="fa-regular fa-plus"></i>
+									</span>
+								</a>
+	
+								<!-- Accordion-content -->
+								<ul class="accordion-content catalog__sub-menu">
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
+									<!-- Sub item -->
+									<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
+								</ul>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="delivery.html" class="accordion__link catalog__link">Доставка</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="payment.html" class="accordion__link catalog__link">Оплата</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="guarantee.html" class="accordion__link catalog__link">Гарантии</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="price.html" class="accordion__link catalog__link">Прайс лист</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="about.html" class="accordion__link catalog__link">о компании</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="reviews.html" class="accordion__link catalog__link">Отзывы</a>
+							</li>
+	
+							<!-- Catalog item -->
+							<li class="catalog__item">
+								<!-- Link -->
+								<a href="contacts.html" class="accordion__link catalog__link">Контакты</a>
+							</li>
+						</div>
 					</div>
 
-					<!--* Catalog -->
-					<div class="catalog w-100 d-sm-block d-none">
-						<!-- Catalog item -->
-						<li class="accordion catalog__item">
-							<!-- Link -->
-							<a href="categories.html" class="accordion__link catalog__link">
-								газ-автозапчасти 
-
-								<!-- Icon -->
-								<span class="accordion__icon catalog__icon accordion__toggle">
-									<i class="fa-regular fa-plus"></i>
-								</span>
-							</a>
-
-							<!-- Accordion-content -->
-							<ul class="accordion-content catalog__sub-menu">
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
-							</ul>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">
-								паз (газон-некст) запчасти
-							</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Блок цилиндров</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">головки и блоки цилиндров</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">КПП</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Редуктор заднего моста</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Раздаточная коробка</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="category.html" class="accordion__link catalog__link">Рулевое управление</a>
-						</li>
-					</div>
-
-					<!--* Mobile catalog -->
-					<div class="catalog w-100 d-sm-none d-block">
-						<!-- Catalog item -->
-						<li class="accordion catalog__item">
-							<!-- Link -->
-							<a href="categories.html" class="accordion__link catalog__link">
-								газ-автозапчасти 
-
-								<!-- Icon -->
-								<span class="accordion__icon catalog__icon accordion__toggle">
-									<i class="fa-regular fa-plus"></i>
-								</span>
-							</a>
-
-							<!-- Accordion-content -->
-							<ul class="accordion-content catalog__sub-menu">
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
-							</ul>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="accordion catalog__item">
-							<!-- Link -->
-							<a href="categories.html" class="accordion__link catalog__link">
-								паз (газон-некст) запчасти
-
-								<!-- Icon -->
-								<span class="accordion__icon catalog__icon accordion__toggle">
-									<i class="fa-regular fa-plus"></i>
-								</span>
-							</a>
-
-							<!-- Accordion-content -->
-							<ul class="accordion-content catalog__sub-menu">
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Блок цилиндров</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Головки и блоки цилиндров</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">КПП</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Редуктор заднего моста</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Раздаточная коробка</a></li>
-								<!-- Sub item -->
-								<li class="catalog__sub-item"><a href="#" class="catalog__sublink w-100 d-block">Рулевое управление</a></li>
-							</ul>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="delivery.html" class="accordion__link catalog__link">Доставка</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="payment.html" class="accordion__link catalog__link">Оплата</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="guarantee.html" class="accordion__link catalog__link">Гарантии</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="price.html" class="accordion__link catalog__link">Прайс лист</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="about.html" class="accordion__link catalog__link">о компании</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="reviews.html" class="accordion__link catalog__link">Отзывы</a>
-						</li>
-
-						<!-- Catalog item -->
-						<li class="catalog__item">
-							<!-- Link -->
-							<a href="contacts.html" class="accordion__link catalog__link">Контакты</a>
-						</li>
-					</div>
-
-					<!--* Contact button -->
-					<a href="#" class="button button-contact sidebar__button mt-4 open-contact-form-btn">
-						Консультация 
-						<i class="button__arrow fa-regular fa-arrow-right-long"></i>
-					</a>
-
-					<!-- Info -->
-					<span class="sidebar__info d-block mt-4">
-						Адрес: г. Нижний Новгород, ул. Монастырка, д. 20К2/1
-					</span>
-
-					<!-- Info -->
-					<span class="sidebar__info d-block mt-3">
-						<a href="tel:+78312183443">+7 (831) 218-34-43</a>
-					</span>
-
-					<!-- Info -->
-					<span class="sidebar__info d-block mt-2">
-						<a href="tel:+79101287469">+7 910 128-74-69</a>
-					</span>
-
-					<!-- Info -->
-					<span class="sidebar__info d-block mt-2">
-						<a href="mailto:info@autopartsnn.ru">info@autopartsnn.ru</a>
-					</span>
-
-					<!--* Social buttons -->
-					<div class="d-flex my-4">
-						<!-- Telegram -->
-						<a href="#" class="soc-btn">
-							<img src="img/telegram.png" alt="">
+					<!-- Bottom -->
+					<div class="d-flex flex-column w-100 align-items-start">
+						<!--* Contact button -->
+						<a href="#" class="button button-contact sidebar__button mt-4 open-contact-form-btn">
+							Консультация 
+							<i class="button__arrow fa-regular fa-arrow-right-long"></i>
 						</a>
 
-						<!-- Vk -->
-						<a href="#" class="soc-btn">
-							<img src="img/vk.png" alt="">
-						</a>
+						<!-- Info -->
+						<span class="sidebar__info d-block mt-4">
+							Адрес: г. Нижний Новгород, ул. Монастырка, д. 20К2/1
+						</span>
+
+						<!-- Info -->
+						<span class="sidebar__info d-block mt-3">
+							<a href="tel:+78312183443">+7 (831) 218-34-43</a>
+						</span>
+
+						<!-- Info -->
+						<span class="sidebar__info d-block mt-2">
+							<a href="tel:+79101287469">+7 910 128-74-69</a>
+						</span>
+
+						<!-- Info -->
+						<span class="sidebar__info d-block mt-2">
+							<a href="mailto:info@autopartsnn.ru">info@autopartsnn.ru</a>
+						</span>
+
+						<!--* Social buttons -->
+						<div class="d-flex my-4">
+							<!-- Telegram -->
+							<a href="#" class="soc-btn">
+								<img src="img/telegram.png" alt="">
+							</a>
+
+							<!-- Vk -->
+							<a href="#" class="soc-btn">
+								<img src="img/vk.png" alt="">
+							</a>
+						</div>
 					</div>
 				</aside>
 			</div>
@@ -304,7 +310,7 @@
 			</div>
 
 			<!--! Static content -->
-			<!-- Left column -->
+			<!-- Left empty column -->
 			<div class="col-md-3 px-0"></div>
 
 			<!-- Right column -->
@@ -340,7 +346,9 @@
 								<div class="card card-category start-section-card mt-lg-0 mt-4">
 									<a href="#" class="card__title">газ-автозапчасти</a>
 
-									<img src="img/main2.png" alt="" class="card__img start-section-card__img mt-2">
+									<a href="product.html" class="d-flex justify-content-center w-100 start-section-card__img-container">
+										<img src="img/main2.png" alt="" class="card__img start-section-card__img mt-2">
+									</a>
 
 									<a href="#" class="card-btn button button-circle start-section-card__btn">
 										<i class="fa-regular fa-arrow-right-long"></i>
@@ -351,7 +359,9 @@
 								<div class="card card-category start-section-card mt-4">
 									<a href="#" class="card__title">паз (газон-некст) запчасти</a>
 
-									<img src="img/main3.png" alt="" class="card__img start-section-card__img mt-2">
+									<a href="product.html" class="d-flex justify-content-center w-100 start-section-card__img-container">
+										<img src="img/main3.png" alt="" class="card__img start-section-card__img mt-2">
+									</a>
 
 									<a href="#" class="card-btn button button-circle start-section-card__btn">
 										<i class="fa-regular fa-arrow-right-long"></i>
