--- a/ZipLock/index.html
+++ b/ZipLock/index.html
@@ -491,7 +491,7 @@
 				</div>
 
 				<!-- Policy&privacy -->
-				<p class="contact-form__text px-5 mt-3">Отправляя свои данные, вы соглашаетесь с нашей <a href="#" class="underlined">Политикой конфиденциальности</a></p>
+				<p class="contact-form__text px-sm-5 mt-3">Отправляя свои данные, вы соглашаетесь с нашей <a href="#" class="underlined">Политикой конфиденциальности</a></p>
 
 				<!-- Submit -->
 				<button type="submit" class="btn contact-form__btn mt-5">ОТПРАВИТЬ</button>
