--- a/Ziplock/index.html
+++ b/Ziplock/index.html
@@ -151,7 +151,7 @@
 			<div class="row align-items-end">
 				<div class="col-lg-6 mt-lg-0 mt-3" data-aos="fade-right" data-aos-duration="800">
 					<!-- Pocket -->
-					<div class="pocket" style="background-image: url(/img/pocket-bg3.png);">
+					<div class="pocket" style="background-image: url('https://smokeskiller.github.io/ZipLock/img/pocket-bg3.png');">
 						<div class="pocket__box">
 							<img src="img/main.png" class="start-banner-main__img">
 						</div>
