--- a/Ziplock/termo.html
+++ b/Ziplock/termo.html
@@ -166,7 +166,7 @@
                     </div>
 
                     <!--? Mobile pocket -->
-					<div class="pocket d-lg-none d-block unbordered" style="background-image: url('/img/pocket-bg3.png');">
+					<div class="pocket d-lg-none d-block unbordered" style="background-image: url('https://smokeskiller.github.io/ZipLock/img/pocket-bg3.png');">
 						<div class="pocket__box">
 							<img src="img/termo.png" class="start-banner-main__img pocket__img">
 						</div>
